--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   api_bloc:
     path: ../
+  dio: ^5.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
