--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: api_bloc
-description: A new Flutter package project.
+description: A Flutter library for managing API calls using the BLoC pattern. This library provides a set of classes and utilities to simplify API calls and manage state changes.
 version: 1.0.0
 homepage: https://github.com/Nialixus/api_bloc.git
 
