--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ funding:
   - https://www.buymeacoffee.com/nialixus
 screenshots:
   - description: 'API Bloc Logo'
-    url: https://user-images.githubusercontent.com/45191605/271759061-4a6cd99b-a745-4c9d-8989-1dcf6566aae2.png
+    path: example/logo.png
 topics:
   - bloc
   - api
