--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: api_bloc
-description: Significantly reducing boilerplate code of BLoC pattern to efficiently handle API interactions.
-version: 1.9.3
+description: Significantly reducing boilerplate code of BLoC pattern to
+  efficiently handle API interactions.
+version: 2.0.0
 homepage: https://inidia.app
 repository: https://github.com/Nialixus/api_bloc.git
 issue_tracker: https://github.com/Nialixus/api_bloc/issues
-funding: 
+funding:
   - https://ko-fi.com/nialixus
 screenshots:
   - description: 'API Bloc Logo'
@@ -15,14 +16,16 @@ topics:
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=1.17.0'
 
 dependencies:
-  args: ^2.4.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  args: ^2.4.2
+  coverage: ^1.7.2
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
