--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ funding:
   - https://ko-fi.com/nialixus
 screenshots:
   - description: 'API Bloc Logo'
-    path: example/logo.png
+    path: logo.png
 topics:
   - bloc
   - api
@@ -19,12 +19,12 @@ environment:
   flutter: '>=1.17.0'
 
 dependencies:
+  args: ^2.4.2
   equatable: ^2.0.5
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  args: ^2.4.2
   coverage: ^1.7.2
   flutter_lints: ^3.0.1
   flutter_test:
