--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
   flutter: '>=1.17.0'
 
+exclude:
+  - coverage/
+  - test/
+
 dependencies:
   args: ^2.4.2
   equatable: ^2.0.5
