--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -29,14 +29,13 @@ jobs:
         run: sudo apt-get install lcov
 
       - name: Generate HTML report
-        run: |
-          genhtml coverage/lcov.info --output-directory coverage/html
+        run: genhtml coverage/lcov.info -o coverage/html
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v2
         with:
           name: coverage-report
-          path: coverage/html
+          path: coverage
 
       - name: Display coverage report link
         run: echo "Coverage report generated and uploaded. View the artifact in the GitHub Actions interface."
