--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: api_bloc
-description: Significantly reducing boilerplate code of BLoC pattern to
-  efficiently handle Rest API interactions.
+description: Flutter widgets designed to simplify the implementation of the BLoC (Business Logic Component) pattern for REST APIs within an MVC architecture. This package significantly reduces boilerplate code by automating BLoC pattern and test generation, efficiently handling REST API interactions.`
 version: 3.0.0
 homepage: https://inidia.app
 repository: https://github.com/Nialixus/api_bloc.git
@@ -19,13 +18,13 @@ environment:
   flutter: '>=1.17.0'
 
 dependencies:
-  args: ^2.4.2
+  args: ^2.5.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  coverage: ^1.7.2
+  coverage: ^1.8.0
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
